hphp/hack/test/typecheck/lambda/lambda_bad_arity.php.like_types.exp
File "lambda_bad_arity.php", line 10, characters 18-24:
Invalid argument (Typing[4110])
File "lambda_bad_arity.php", line 6, characters 15-16:
Expected T1
File "lambda_bad_arity.php", line 7, characters 5-6:
But got dynamic because it is an unenforceable type
File "lambda_bad_arity.php", line 10, characters 27-33:
Invalid argument (Typing[4110])
File "lambda_bad_arity.php", line 6, characters 19-20:
Expected T2
File "lambda_bad_arity.php", line 8, characters 5-6:
But got dynamic because it is an unenforceable type
File "lambda_bad_arity.php", line 15, characters 7-65:
Too few arguments (required 2 but got 1) (Typing[4104])
File "lambda_bad_arity.php", line 6, characters 5-32:
Definition is here
File "lambda_bad_arity.php", line 15, characters 7-65:
Invalid argument (Typing[4110])
File "lambda_bad_arity.php", line 6, characters 5-32:
Expected ~(function([unresolved], [unresolved]): ?[unresolved]) because it is an unenforceable type
File "lambda_bad_arity.php", line 15, characters 7-65:
But got (function(int $x, [unresolved]): string)
